deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak-db
  namespace: namespace-name
spec:
  selector:
    matchLabels:
      service: keycloak-db
  template:
    metadata:
      labels:
        service: keycloak-db
    spec:
      nodeSelector:
        storageaccess: direct
      volumes:
      - name: keycloak-db
        hostPath:
          path: "/cluster/namespace-name/keycloak/db"
          type: "DirectoryOrCreate"
      containers:
        - name: "keycloak-db"
          image: "postgres:10-alpine"
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: keycloak-db

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
  namespace: namespace-name
spec:
  selector:
    matchLabels:
      service: keycloak
  template:
    metadata:
      labels:
        service: keycloak
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: performance
                operator: In
                values:
                - high
      containers:
        - name: "keycloak"
          image: "jboss/keycloak:9.0.2"
          args:
          - -b 0.0.0.0
          - -Dkeycloak.profile.feature.docker=enabled
          ports:
          - name: http
            containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: keycloak-db
  namespace: namespace-name
spec:
  selector:
    service: keycloak-db
  ports:
  - protocol: TCP
    port: 5432
    name: db

---

kind: Service
apiVersion: v1
metadata:
  name: keycloak
  namespace: namespace-name
spec:
  selector:
    service: keycloak
  ports:
  - protocol: TCP
    port: 8080
    name: http

---

kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: keycloak
  namespace: namespace-name
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
spec:
  rules:
  - host: keycloak.domain.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: http
